add working files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>MARIAM KVANTALIANI</h1>
+  <a href="about.html">
   <div class="main">
     <div class="box about">
   <div class="about-content">
@@ -15,19 +16,21 @@
     <div class="about-footer">
       <span class="about-text">see about me</span>
       <span class="about-icon">↓</span>
-    </div>
   </div>
+  </div>
+  </a>
     <div class="shapes">
-    <img src="android.svg" class="logo android" />
-    <img src="android.svg" class="logo android" />
-    <img src="kotlin.svg" class="logo kotlin" />
-    <img src="kotlin.svg" class="logo kotlin" />
-    <img src="gradle.svg" class="logo kotlin" />
-    <img src="gradle.svg" class="logo kotlin" />
-    <img src="rust.svg" class="logo kotlin" />
-    <img src="rust.svg" class="logo kotlin" />
+    <img src="images/android.svg" class="logo android" />
+    <img src="images/android.svg" class="logo android" />
+    <img src="images/kotlin.svg" class="logo kotlin" />
+    <img src="images/kotlin.svg" class="logo kotlin" />
+    <img src="images/gradle.svg" class="logo kotlin" />
+    <img src="images/gradle.svg" class="logo kotlin" />
+    <img src="images/rust.svg" class="logo kotlin" />
+    <img src="images/rust.svg" class="logo kotlin" />
   </div>
   </div>
+  <a href="work.html">
     <div class="right-column">
       <div class="top-row">
         <div class="box work">
@@ -35,33 +38,38 @@
             <div class="work-footer">
               <span class="work-text">WORK</span>
               <span class="work-icon">
-                <img src="work.svg" class="send"/>
+                <img src="images/work.svg" class="send"/>
               </span>
             </div>
           </div>
         </div>
+      </a>
+      <a href="projects.html">
         <div class="box projects">
           <div class="projects-content">
             <div class="projects-footer">
               <span class="projects-text">PROJECTS</span>
               <span class="projects-icon">
-                <img src="github.svg" class="github"/>
+                <img src="images/github.svg" class="github"/>
               </span>
             </div>
           </div>
         </div>
       </div>
+    </a>
+    <a href="contact.html">
       <div class="box contact">
         <div class="contact-content">
           <div class="contact-footer">
             <span class="contact-text">CONTACT</span>
             <span class="contact-icon">
-              <img src="send.svg" class="send"/>
+              <img src="images/send.svg" class="send"/>
             </span>
           </div>
         </div>
       </div>
     </div>
+    </a>
   </div>
 </body>
 </html>
