update projects page & project structure

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio - Mariam Kvantaliani</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="assests/style.css" />
 </head>
 <body>
   <h1>MARIAM KVANTALIANI</h1>
-  <a href="about.html">
+  <a href="about/about.html">
   <div class="main">
     <div class="box about">
   <div class="about-content">
@@ -20,17 +20,17 @@
   </div>
   </a>
     <div class="shapes">
-    <img src="images/android.svg" class="logo android" />
-    <img src="images/android.svg" class="logo android" />
-    <img src="images/kotlin.svg" class="logo kotlin" />
-    <img src="images/kotlin.svg" class="logo kotlin" />
-    <img src="images/gradle.svg" class="logo kotlin" />
-    <img src="images/gradle.svg" class="logo kotlin" />
-    <img src="images/rust.svg" class="logo kotlin" />
-    <img src="images/rust.svg" class="logo kotlin" />
+    <img src="assests/android.svg" class="logo android" />
+    <img src="assests/android.svg" class="logo android" />
+    <img src="assests//kotlin.svg" class="logo kotlin" />
+    <img src="assests//kotlin.svg" class="logo kotlin" />
+    <img src="assests//gradle.svg" class="logo kotlin" />
+    <img src="assests//gradle.svg" class="logo kotlin" />
+    <img src="assests//rust.svg" class="logo kotlin" />
+    <img src="assests//rust.svg" class="logo kotlin" />
   </div>
   </div>
-  <a href="work.html">
+  <a href="work/work.html">
     <div class="right-column">
       <div class="top-row">
         <div class="box work">
@@ -38,32 +38,32 @@
             <div class="work-footer">
               <span class="work-text">WORK</span>
               <span class="work-icon">
-                <img src="images/work.svg" class="send"/>
+                <img src="assests/work.svg" class="send"/>
               </span>
             </div>
           </div>
         </div>
       </a>
-      <a href="projects.html">
+      <a href="projects/projects.html">
         <div class="box projects">
           <div class="projects-content">
             <div class="projects-footer">
               <span class="projects-text">PROJECTS</span>
               <span class="projects-icon">
-                <img src="images/github.svg" class="github"/>
+                <img src="assests/github.svg" class="github"/>
               </span>
             </div>
           </div>
         </div>
       </div>
     </a>
-    <a href="contact.html">
+    <a href="contact/contact.html">
       <div class="box contact">
         <div class="contact-content">
           <div class="contact-footer">
             <span class="contact-text">CONTACT</span>
             <span class="contact-icon">
-              <img src="images/send.svg" class="send"/>
+              <img src="assests/send.svg" class="send"/>
             </span>
           </div>
         </div>
