--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,174 +1,190 @@
 <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Contact Us</title>
-     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-     <style>
-         body {
-     font-family: 'Inter', sans-serif;
-     background-color: #f8fafc;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     min-height: 100vh;
-     padding: 20px;
-     box-sizing: border-box;
- }
- 
- .container {
-     max-width: 1200px;
-     width: 100%;
-     text-align: center;
-     padding: 40px;
- }
- 
- .page-title {
-     font-size: 2.5rem;
-     font-weight: bold;
-     color: #2d3748;
-     margin-bottom: 20px;
- }
- 
- .page-description {
-     font-size: 1.125rem;
-     color: #718096;
-     margin-bottom: 40px;
- }
- 
- .contact-grid {
-     display: grid;
-     grid-template-columns: 1fr;
-     gap: 20px;
- }
- 
- @media (min-width: 768px) {
-     .contact-grid {
-         grid-template-columns: repeat(3, 1fr);
-     }
- }
- 
- .contact-card {
-     background-color: #fff;
-     border-radius: 0.75rem;
-     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-     padding: 32px;
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     border-top-width: 4px;
-     box-sizing: border-box;
- }
- 
- .press-card {
-     border-top-color: #3b82f6;
- }
- 
- .support-card {
-     border-top-color: #10b981;
- }
- 
- .sales-card {
-     border-top-color: #6366f1;
- }
- 
- .card-title {
-     font-size: 1.5rem;
-     font-weight: 600;
-     color: #2d3748;
-     margin-bottom: 16px;
- }
- 
- .card-description {
-     color: #718096;
-     margin-bottom: 32px;
-     flex-grow: 1;
- }
- 
- .card-button {
-     font-weight: 500;
-     padding: 12px 24px;
-     border-radius: 0.5rem;
-     transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
-     border: 2px solid transparent;
-     cursor: pointer;
- }
- 
- .press-button {
-     color: #3b82f6;
-     background-color: transparent;
-     border-color: #3b82f6;
- }
- 
- .press-button:hover {
-     background-color: #eff6ff;
-     color: #2563eb;
- }
- 
- .support-button {
-     color: #fff;
-     background-color: #10b981;
- }
- 
- .support-button:hover {
-     background-color: #059669;
- }
- 
- .sales-button {
-     color: #6366f1;
-     background-color: transparent;
-     border-color: #6366f1;
- }
- 
- .sales-button:hover {
-     background-color: #e0e7ff;
-     color: #4f46e5;
- }
- 
- .support-link {
-     color: #718096;
-     font-size: 0.875rem;
-     margin-top: 16px;
-     text-decoration: none;
- }
- 
- .support-link:hover {
-     text-decoration: underline;
- }
-     </style>
- </head>
- <body>
-     <div class="container">
-         <h1 class="page-title">Contact Us</h1>
-         <p class="page-description">Have any questions? We'd love to hear from you.</p>
- 
-         <div class="contact-grid">
-             <div class="contact-card press-card content">
-                 <h2 class="card-title">Press</h2>
-                 <p class="card-description">
-                     Are you interested in our latest news or working on a Grammarly story and need to get in touch?
-                 </p>
-                 <button class="card-button press-button">Visit Press Page</button>
-             </div>
- 
-             <div class="contact-card support-card">
-                 <h2 class="card-title">Help & Support</h2>
-                 <p class="card-description">
-                     Our support team is spread across the globe to give you answers fast.
-                 </p>
-                 <button class="card-button support-button">Visit Support Page</button>
-                 <a href="#" class="support-link">SUBMIT A REQUEST</a>
-             </div>
- 
-             <div class="contact-card sales-card">
-                 <h2 class="card-title">Sales</h2>
-                 <p class="card-description">
-                     Get in touch with our sales team to see how we can work together.
-                 </p>
-                 <button class="card-button sales-button">Contact Sales</button>
-             </div>
-         </div>
-     </div>
- </body>
- </html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <style>
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    background-color: #1a1a1a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+
+h1.main-title {
+    font-size: 3.5em;
+    color: white;
+    text-align: center;
+    margin-bottom: 50px;
+    font-weight: 700;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    justify-content: center;
+    padding: 20px;
+}
+
+.card {
+    background-color: rgba(30, 30, 30, 0.8);
+    border-radius: 15px;
+    padding: 40px;
+    color: white;
+    text-align: left;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    width: 500px;
+    flex-shrink: 0;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
+}
+
+.card h1 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+
+.card h2 {
+    font-size: 1.8em;
+    margin-bottom: 30px;
+    font-weight: 400;
+    color: #cccccc;
+}
+
+.contact-info {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.avatar {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+    background-color: gray;
+}
+
+.contact-info span {
+    flex-grow: 1;
+    font-size: 1.1em;
+    color: #e0e0e0;
+}
+
+.contact-button {
+    background: linear-gradient(to right, #4a00e0, #8e2de2);
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 1.1em;
+    font-weight: 500;
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    white-space: nowrap;
+}
+
+.contact-button:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px) {
+    h1.main-title {
+        font-size: 2.5em;
+        margin-bottom: 30px;
+    }
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card {
+        padding: 30px;
+        max-width: 90%;
+        width: auto;
+    }
+
+    .card h1 {
+        font-size: 2em;
+    }
+
+    .card h2 {
+        font-size: 1.5em;
+    }
+
+    .contact-info {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    .contact-button {
+        padding: 12px 25px;
+        font-size: 1em;
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    h1.main-title {
+        font-size: 2em;
+    }
+    .card {
+        padding: 25px;
+    }
+
+    .card h1 {
+        font-size: 1.8em;
+    }
+
+    .card h2 {
+        font-size: 1.3em;
+    }
+}
+    </style>
+</head>
+<body>
+    <h1>Contact Me!</h1>
+
+    <div class="container">
+        <div class="card">
+            <h1>Have an idea?</h1>
+            <h2>Feel free to contact me</h2>
+            <div class="contact-info">
+                <img src="/assests/linkedin.png" class="avatar">
+                <span>Turn Ideas Into Reality</span>
+                <a href='#' target="_blank"><button class="contact-button">Contact me</button></a>
+            </div>
+        </div>
+
+        <div class="card">
+            <h1>Have another idea?</h1>
+            <h2>Let's discuss it!</h2>
+            <div class="contact-info">
+                <img src='/assests/vecteezy_blue-mail-icon_12909518.png' class="avatar">
+                <span>Innovation Awaits</span>
+               <a href="#" target="_blank"> <button class="contact-button">Reach Out</button></a>
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
