--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <h1>MARIAM KVANTALIANI</h1>
-  <a href="about/about.html">
-  <div class="main">
+  <div onclick="window.location.href = '/about/about.html'" class="main">
     <div class="box about">
   <div class="about-content">
     <span class="about-title">ABOUT ME</span>
@@ -18,7 +17,7 @@
       <span class="about-icon">↓</span>
   </div>
   </div>
-  </a>
+
     <div class="shapes">
     <img src="assests/android.svg" class="logo android" />
     <img src="assests/android.svg" class="logo android" />
@@ -30,7 +29,7 @@
     <img src="assests//rust.svg" class="logo kotlin" />
   </div>
   </div>
-  <a href="work/work.html">
+  <a href="work/work.html" style='text-decoration: none;'>
     <div class="right-column">
       <div class="top-row">
         <div class="box work">
@@ -44,7 +43,7 @@
           </div>
         </div>
       </a>
-      <a href="projects/projects.html">
+      <a href="projects/projects.html" style="text-decoration: none;">
         <div class="box projects">
           <div class="projects-content">
             <div class="projects-footer">
@@ -57,7 +56,7 @@
         </div>
       </div>
     </a>
-    <a href="contact/contact.html">
+    <a href="contact/contact.html" style="text-decoration: none;">
       <div class="box contact">
         <div class="contact-content">
           <div class="contact-footer">
