--- a/contact/contact.html
+++ b/contact/contact.html
@@ -7,7 +7,7 @@
     <style>
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-    background-color: #1a1a1a;
+    background-color: #e9d48d;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,6 +17,19 @@ body {
     padding: 20px;
     box-sizing: border-box;
     overflow-x: hidden;
+}
+.back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            padding: 10px 15px;
+            background-color: #555;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 0.9em;
+            transition: background-color 0.3s ease;
+            z-index: 1000;
 }
 
 h1.main-title {
@@ -36,7 +49,7 @@ h1.main-title {
 }
 
 .card {
-    background-color: rgba(30, 30, 30, 0.8);
+    background-color: #d1b55f;
     border-radius: 15px;
     padding: 40px;
     color: white;
@@ -65,7 +78,7 @@ h1.main-title {
     font-size: 1.8em;
     margin-bottom: 30px;
     font-weight: 400;
-    color: #cccccc;
+    color: #ebe5e5;
 }
 
 .contact-info {
@@ -103,7 +116,7 @@ h1.main-title {
 
 .contact-button:hover {
     transform: translateY(-2px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 15px rgba(213, 175, 69, 0.3);
 }
 
 @media (max-width: 768px) {
@@ -162,6 +175,7 @@ h1.main-title {
     </style>
 </head>
 <body>
+    <a href="/index.html" class="back-button">Back</a>
     <h1>Contact Me!</h1>
 
     <div class="container">
