--- a/about/about.html
+++ b/about/about.html
@@ -3,9 +3,216 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #1b32a2ec;
+            color: #FFFFFF;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 2rem;
+            overflow: hidden;
+        }
+
+        @media (min-width: 768px) {
+            body {
+                padding: 3rem;
+            }
+        }
+        @media (min-width: 1024px) {
+            body {
+                padding: 4rem;
+            }
+        }
+
+        .container {
+            margin-bottom: 200px;
+            max-width: 64rem;
+            width: 100%;
+        }
+
+        header {
+            margin-bottom: 2.5rem;
+        }
+        @media (min-width: 1024px) {
+            header {
+                margin-bottom: 3rem;
+            }
+        }
+
+        header h1 {
+            font-size: 2.25rem;
+            font-weight: 700;
+            margin-bottom: 0.5rem;
+        }
+        @media (min-width: 768px) {
+            header h1 {
+                font-size: 2.5rem;
+            }
+        }
+        @media (min-width: 1024px) {
+            header h1 {
+                font-size: 3rem;
+            }
+        }
+
+        header h2 {
+            font-size: 1.25rem;
+            font-weight: 500;
+            margin-bottom: 0.25rem;
+        }
+        @media (min-width: 768px) {
+            header h2 {
+                font-size: 1.5rem;
+            }
+        }
+
+        header p:nth-of-type(1) {
+            font-size: 1rem;
+            margin-bottom: 1.5rem;
+        }
+        @media (min-width: 768px) {
+            header p:nth-of-type(1) {
+                font-size: 1.125rem;
+            }
+        }
+
+        header p:nth-of-type(2) {
+            font-size: 0.875rem;
+            line-height: 1.625;
+        }
+        @media (min-width: 768px) {
+            header p:nth-of-type(2) {
+                font-size: 1rem;
+            }
+        }
+
+        section h3 {
+            font-size: 1.25rem;
+            font-weight: 700;
+            margin-bottom: 1.5rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+        @media (min-width: 768px) {
+            section h3 {
+                font-size: 1.5rem;
+            }
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 1.5rem;
+        }
+        @media (min-width: 768px) {
+            .skills-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+        @media (min-width: 1024px) {
+            .skills-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+
+        .skill-card {
+            background-color: #FFFFFF;
+            color: #1F2937;
+            padding: 1.5rem;
+            border-radius: 0.75rem;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            transition: all 0.3s ease;
+        }
+
+        .skill-card:hover { 
+            transform: translateY(-5px);
+            box-shadow: 0 15px 25px -5px rgba(0, 0, 0, 0.2), 0 10px 10px -5px rgba(0, 0, 0, 0.08);
+        }
+
+        .skill-card .icon {
+            margin-bottom: 1rem;
+            color: #2563EB;
+        }
+
+        .skill-card .icon svg {
+            width: 2rem;
+            height: 2rem;
+        }
+
+        .skill-card h4 {
+            font-size: 1.125rem;
+            font-weight: 600;
+            margin-bottom: 0.5rem;
+        }
+
+        .skill-card p {
+            font-size: 0.875rem;
+            line-height: 1.375;
+        }
+    </style>
 </head>
-<body>
-    
+<body class="p-8 md:p-12 lg:p-16 text-white min-h-screen flex items-center justify-center">
+    <div class="container">
+        <header>
+            <h1>Mariam Kvantaliani</h1>
+            <h2>Software Developer</h2>
+            <p>Tbilisi, Georgia</p>
+            <p>
+                I'm a product designer passionate about creating intuitive and impactful user experiences. With a background in visual
+                communication and a keen eye for detail, I strive to bridge the gap between user needs and business goals. My design
+                process is rooted in empathy, research, and iterative prototyping, ensuring that every solution is both aesthetically
+                pleasing and functionally effective.
+            </p>
+        </header>
+
+        <section>
+            <h3>Technical Skills</h3>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <div class="icon">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"></path>
+                        </svg>
+                    </div>
+                    <h4>Programming Languages</h4>
+                    <p>
+                        User Interface Design, User Experience Design, Interaction Design
+                    </p>
+                </div>
+
+                <div class="skill-card">
+                    <div class="icon">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                        </svg>
+                    </div>
+                    <h4>Research & Prototyping</h4>
+                    <p>
+                        User Research, Prototyping, Usability Testing
+                    </p>
+                </div>
+
+                <div class="skill-card">
+                    <div class="icon">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
+                        </svg>
+                    </div>
+                    <h4>Visual Design & Systems</h4>
+                    <p>
+                        Visual Design, Design Systems, Branding
+                    </p>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
