--- a/about/about.html
+++ b/about/about.html
@@ -166,10 +166,11 @@
             <h2>Software Developer</h2>
             <p>Tbilisi, Georgia</p>
             <p>
-                I'm a product designer passionate about creating intuitive and impactful user experiences. With a background in visual
-                communication and a keen eye for detail, I strive to bridge the gap between user needs and business goals. My design
-                process is rooted in empathy, research, and iterative prototyping, ensuring that every solution is both aesthetically
-                pleasing and functionally effective.
+                Experienced Android Developer with over 3 years of expertise in designing, building, and deploying high-performance
+applications. Proficient in Kotlin, Jetpack Compose, and modern Android frameworks, with a focus on Clean Architecture
+and scalable solutions.
+Skilled in optimizing user experiences and driving app performance improvements. Attempting to contribute to innovative
+mobile solutions in a forward-thinking organization
             </p>
         </header>
 
@@ -184,7 +185,7 @@
                     </div>
                     <h4>Programming Languages</h4>
                     <p>
-                        User Interface Design, User Experience Design, Interaction Design
+                        Kotlin, Java, Rust
                     </p>
                 </div>
 
@@ -194,9 +195,11 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                         </svg>
                     </div>
-                    <h4>Research & Prototyping</h4>
+                    <h4>Android Development</h4>
                     <p>
-                        User Research, Prototyping, Usability Testing
+                        Jetpack Compose (Advanced UI, Performance Optimization, Animations), Jetpack Glance, Kotlin
+Coroutines (Flow), Dagger 2/Hilt (Multi-module DI), Room, OkHttp, Retrofit, MVI/Unidirectional Data Flow,
+Android SDK, Work Manager, Navigation Component, Notification/Notification Channels, Android Profiler
                     </p>
                 </div>
 
@@ -206,9 +209,33 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
                         </svg>
                     </div>
-                    <h4>Visual Design & Systems</h4>
+                    <h4>Testing Frameworks</h4>
                     <p>
-                        Visual Design, Design Systems, Branding
+                        JUnit 4, Espresso, Robolectric, Compose Preview Screenshot Testing
+                    </p>
+                </div>
+
+                <div class="skill-card">
+                    <div class="icon">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
+                        </svg>
+                    </div>
+                    <h4>Architectural and Design Patterns</h4>
+                    <p>
+                        SOLID Principles, Clean Architecture, Design Patterns, MVVM, MVI
+                    </p>
+                </div>
+
+                 <div class="skill-card">
+                    <div class="icon">
+                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
+                        </svg>
+                    </div>
+                    <h4>Tools and Platforms</h4>
+                    <p>
+                        Gradle, Git (GitHub), Jira, Sentry, CI/CD (Bitrise, GitHub Actions), Firebase, Figma
                     </p>
                 </div>
             </div>
